# stealth-lightbeacon-node

./: .env.example  .gitignore  .gitlab-ci.yml  .release-it.json  .tmp_release_notes_v3.0.6.md  .tmp_release_notes_v3.0.7.md  .tmp_release_notes_v3.0.8.md  .tmp_release_notes_v3.0.9.md  CHANGELOG.md  CLI-readme.md  CONTRIBUTING.md  Cargo.toml  LICENSE  SECURITY.md  architecture.md  bill-of-materials.md  bitbucket-pipelines.yml  package-lock.json  package.json  pnpm-lock.yaml  readme.md  skills-lock.json  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
desktop/: index.html  main.js  package.json
docs/: agent-hooks.md  bill-of-materials.html.md  feature-gap-implementation-plan.md  phase-wise-backlog.md  publishing-roadmap-checklist.md  publishing-roadmap.md  release-notes-v3.0.11.md  release-process.md
scripts/: run-external-audits.sh  summarize-coverage.js
src/: cli.ts  index.ts
tests/: accessibility.test.js  aeo.test.js  browser-pool.test.js  budget.test.js  cache-contention.test.js  config.test.js  crawler.test.js  db-duckdb.test.js  db-lancedb.test.js  db-runtime.test.js  db-schemas.test.js  db-timeouts.test.js  diffs.test.js  drupal-security.test.js  evaluator-registry.test.js  geo-extended.test.js  geo.test.js  mcp-client.test.js  mcp-server-extended.test.js  mcp-tools.test.js  mcp.integration.test.js  mcp.test.js  ontology.test.js  orchestrator.test.js  pagespeed-cache.test.js  pagespeed-service.test.js  performance.test.js  recon.test.js  robots.test.js  scraping.test.js  self-healing.test.js  seo-extended.test.js  seo.test.js  (+5 more)
(+76 files in other folders)
