[package]
name = "stealth-lightbeacon-context-daemon"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[[bin]]
name = "context-daemon"
path = "src/backend/daemon.rs"

[[bin]]
name = "context-mcp"
path = "src/backend/mcp.rs"

[dependencies]
libc = "0.2"
notify = "6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
